@@ -4,3 +4,7 @@ A application used to create graphics using Java and JavaFX
 To use javaFX, set build path:
 
 Mac: --module-path /Users/jessanilinsangan/Desktop/myIT-work/javafx-sdk-17.0.2/lib --add-modules=javafx.controls,javafx.fxml,javafx.graphics
+
+Better way: 
+Install Javafx folder. Add the folder to the eclipse folder and paste that installed folder inside. Open the folder within the project, select the jar files only and add to build path. Then add the file path under the arguments:
+--module-path "javafx-sdk-17.0.2/lib" --add-modules=javafx.controls,javafx.fxml,javafx.graphics,javafx.base
